<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="@color/colorMain">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_menu_black_24dp"
            android:padding="10dp"
            android:id="@+id/ic_menu"
            android:layout_gravity="right"
            android:tint="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/menu_director"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="right"
            android:scaleX="1.2"
            android:scaleY="1.3"
            android:id="@+id/director_tv"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/name"
            android:layout_toLeftOf="@+id/pic"
            android:layout_marginTop="10dp"
            android:textDirection="rtl"/>

        <ImageView
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/pic"
            android:src="@drawable/ceo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_toLeftOf="@+id/pic"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/name"/>
    </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body"
                android:textSize="18dp"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>