<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="@color/colorMain">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_menu_black_24dp"
            android:padding="10dp"
            android:id="@+id/ic_menu"
            android:layout_gravity="right"
            android:tint="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/menu_info"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="right"
            android:scaleX="1.2"
            android:scaleY="1.3"
            android:id="@+id/info_tv"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/reception1"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description1"
        android:breakStrategy="simple"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="0dp"
            android:scaleType="fitXY"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/reception2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:breakStrategy="simple"
            android:textDirection="rtl"
            android:text="@string/description2" />


    </LinearLayout>
    </LinearLayout>

    </ScrollView>





</LinearLayout>